--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<!DOCTYPE html><body> <div id="title"></div> <div id="description"></div> <script src="/main.a0e33e9b.js"></script>
+<!DOCTYPE html><body> <div id="title"></div> <div id="description"></div> <script src="https://nekotheshadow.github.io/parcel-sample/main.a0e33e9b.js"></script>
 </body>
